<resources>
    <string name="app_name">TimelyTrove</string>
    <string name="main_activity">Main Activity</string>
    <string name="task_track">Task Track</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tasks">Tasks</string>
    <string name="calendar">Calendar</string>
    <string name="profile">Profile</string>
    <string name="category">Category</string>
    <string name="theme">Theme</string>
    <string name="feedback">Feedback</string>
    <string name="date_time_format">Date Time Format</string>
    <string name="share">Share</string>
    <string name="all_tasks">All Tasks</string>
    <string name="create_new_category">Create New Category</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="enter_category">Enter category</string>
    <string name="nothing_to_do">Nothing to do</string>
    <string name="description">Description</string>
    <string name="sub_tasks">Sub Tasks</string>
    <string name="sub_task_description">Sub Task Description</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="create_task">Create task</string>
    <string name="task_title">Task Title</string>
    <string name="enter_task_title">Enter Task Title</string>
    <string name="starts">Starts</string>
    <string name="enter_date_and_time">Enter Date And Time</string>
    <string name="ends">Ends</string>
    <string name="enter_date_time">Enter date time</string>
    <string name="add">Add</string>
    <string name="enter_description">Enter Description</string>
    <string name="update">Update</string>
    <string name="are_you_sure_you_want_to_delete_this">Are you sure you want to delete this?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="enter_time">Enter time</string>
    <string name="enter_date">Enter date</string>
    <string name="you_want_to_delete_this_list">You want to delete this category?</string>
    <string name="separation">-</string>
    <string name="update_category">Update category</string>
    <string name="welcome_to_timelyTrove">Welcome To TimelyTrove</string>
    <string name="press_continue">Continue</string>
    <string name="timelyTrove">TimelyTrove</string>
    <string name="update_task">Update Task</string>
    <string name="select_color_for_tasklist_background">Select Color For Tasklist Background</string>
    <string name="green">Green</string>
    <string name="red">Red</string>
    <string name="orange">Orange</string>
    <string name="blue">Blue</string>
    <string name="pink">Pink</string>
    <string name="select_one">Select One</string>
    <string name="light_green">Light Green</string>
    <string name="unable_to_send_your_email">Unable to send your email</string>
    <string name="add_new_tasks">Add New Tasks</string>
    <string name="add_new_categories">Add New Categories</string>
    <string name="there_is_no_tasks">There is no tasks</string>
    <string name="no_task_to_do">No Task To Do!</string>
    <string name="add_new_tasks_by_clicking_plus">Add new task by \nclicking + button</string>
    <string name="no_category_found">No Category Found !</string>
    <string name="add_new_category_by_clicking_plus">Add new category by \nclicking + button</string>
    <string name="task_added">Task Added!</string>
    <string name="add_new_tasks_and_get_rewarded">Add new tasks and get rewarded !</string>
    <string name="add_new_tasks_and_get_rewarded_press_continue_to_get_started">Add new tasks and get rewarded after completing tasks !\nPress continue to get started !</string>
    <string name="sea_green">Sea Green</string>
    <string name="light">Light</string>
    <string name="purple">Purple</string>
    <string name="done">Done</string>

    <string-array name="category">
        <item name="all">All</item>
    </string-array>
    <string name="year_month_day">(Year/Month/Day)</string>
    <string name="day_month_year">(Day/Month/Year)</string>
    <string name="month_day_year">(Month/Day/Year)</string>

    <string-array name="date_time_format">
        <item name="dmy">dd/MM/yyyy</item>
        <item name="dMy">dd-MM-yyyy</item>
        <item name="mdy">MMM dd, yyyy</item>
    </string-array>
    <string name="select_date_format">Select Date Format</string>
    <string name="select_theme_format">Select Theme Format</string>
    <string name="date_format">Date Format</string>
    <string name="time_format">Time Format</string>
    <string name="select_time_format">Select Time Format</string>
    <string name="have_you_completed_your_task">Have you completed your task?</string>
    <string name="progress">Progress</string>
    <string name="day">Day</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="january">January</string>
    <string name="select_month">Select Month</string>
    <string name="change_theme">Change Theme</string>
    <string name="change_theme_msg">Do you want to change the theme color?</string>
    <string name="dark">Dark</string>
    <string name="ok">OK</string>
    <string name="select_seven_days_only">Select 7 days only!</string>
    <string name="rewards">Rewards</string>
    <string name="zero">0</string>
    <string name="reward_added">Reward Added!</string>
    <string name="complete_your_tasks_and_get_rewarded">Complete Your Tasks And Get Rewarded!</string>
    <string name="rewards_added">Reward Added</string>

    <string-array name="theme_format">
        <item name="light">Light</item>
        <item name="dark">Dark</item>
    </string-array>
    <string-array name="time_format">
        <item name="24hour_format">HH:mm</item>
        <item name="12hour_format">hh:mm aa</item>
    </string-array>
    <string-array name="month_picker">
        <item name="jan">January</item>
        <item name="feb">February</item>
        <item name="march">March</item>
        <item name="apr">April</item>
        <item name="may">May</item>
        <item name="june">June</item>
        <item name="july">July</item>
        <item name="aug">Aug</item>
        <item name="sep">September</item>
        <item name="oct">October</item>
        <item name="nov">November</item>
        <item name="dec">December</item>
    </string-array>
</resources>