<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/dp_10"
    android:orientation="vertical"
    tools:context=".ProfileFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:padding="@dimen/dp_10"
            android:src="@drawable/baseline_grading_24" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:id="@+id/tvCategory"
            style="@style/CustomMedium"
            android:textSize="@dimen/sp_20"
            android:padding="@dimen/dp_10"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:id="@+id/lvTheme"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_10"
            android:src="@drawable/baseline_brush_24" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/CustomMedium"
            android:padding="@dimen/dp_10"
            android:text="@string/theme"
            android:textSize="@dimen/sp_20"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:id="@+id/lvFeedback"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_10"
            android:src="@drawable/baseline_edit_note_24" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/CustomMedium"
            android:id="@+id/tvFeedback"
            android:padding="@dimen/dp_10"
            android:text="@string/feedback"
            android:textSize="@dimen/sp_20"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:id="@+id/lvDate"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_10"
            android:src="@drawable/baseline_calendar_today_24" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/CustomMedium"
            android:padding="@dimen/dp_10"
            android:text="@string/date_format"
            android:textSize="@dimen/sp_20"
            android:textStyle="bold" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:id="@+id/lvTime"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_10"
            android:src="@drawable/baseline_access_time_24" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/CustomMedium"
            android:padding="@dimen/dp_10"
            android:text="@string/time_format"
            android:textSize="@dimen/sp_20"
            android:textStyle="bold" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:id="@+id/lvReward"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_10"
            android:src="@drawable/baseline_star_border_purple500_24" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/CustomMedium"
            android:padding="@dimen/dp_10"
            android:text="@string/rewards"
            android:textSize="@dimen/sp_20"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_10"
            android:src="@drawable/baseline_share_24" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/CustomMedium"
            android:padding="@dimen/dp_10"
            android:text="@string/share"
            android:textSize="@dimen/sp_20"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>