<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dp_10"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/CustomHighBold"
        android:padding="@dimen/dp_10"
        android:gravity="center"
        android:id="@+id/tvCategory"
        android:text="@string/create_new_category"
        android:textSize="@dimen/sp_20"
        android:textStyle="bold" />
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_10"
        app:cardCornerRadius="@dimen/dp_10"
        android:backgroundTint="@color/grey">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etCreateNewCategory"
        style="@style/CustomLow"
        android:padding="@dimen/dp_10"
        android:background="@null"
        android:hint="@string/create_new_category" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:padding="@dimen/dp_10"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/CustomMedium"
            android:text="@string/cancel"
            android:textSize="@dimen/sp_20" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/CustomMedium"
            android:text="@string/save"
            android:textSize="@dimen/sp_20" />
    </LinearLayout>

</LinearLayout>